# daisy

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  README_DOCKER.md  README_REDUCED.md  docker_run_cli.sh  extract_saved_results_tars.sh  pyproject.toml
src/: data_analysys.ipynb  data_analysys_cost_statistics.ipynb  data_analysys_dataset_overview.ipynb  data_analysys_pre_tests.ipynb  data_analysys_rq1_best_overall.ipynb  data_analysys_rq2_loc_strategy.ipynb  data_analysys_rq3_example_gatherer.ipynb  data_analysys_rq4_different_llms.ipynb  full_dataset_creator.py  main.py  main_prompt.py  main_rq1_best_overall.py  main_rq2_fault_localization.py  main_rq3_example_retrieval.py  main_test.py  requirements.txt  run_tests.py  single_file_run.py
src/analysis/: dataset_graphs.py  failure_analysys.py  get_dataframe_from_results.py  get_results.py  get_tables_results.py
src/dafny/: dafny_runner.py
src/datasets/: dafny_dataset_all_positions_gatherer.py  dafny_dataset_generator.py  dafny_get_all_assertions.py  laurel_position_inferer.py
src/llm/: extract_error_blocks.py  llm_amazon_bedrock.py  llm_configurations.py  llm_create.py  llm_open_ai.py  llm_openrounter.py  llm_pipeline.py  parse_raw_response.py  retrieve_examples.py
src/research_questions/: main_rq1.py  main_rq2.py  main_rq3.py
src/tests/: test_assertion_method_classes.py  test_color_helpers.py  test_dafny_runner.py  test_dataset_creator.py  test_dataset_extensions_loc.py  test_example_retrieval.py  test_llm_dummy.py  test_llm_openai.py  (+4 more)
src_new/: __init__.py  cli.py
(+90 files in other folders)
