[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daisy"
version = "0.0.0"
description = "Daisy — assertion inference toolkit"
authors = [{name = "Daisy Authors"}]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
